# BallsDex-DiscordBot

./: .dockerignore  .env  .git-blame-ignore-revs  .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  CNAME  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  LICENSE  PRICING.md  README.md  TESTING.md  backup.sql  ballsdex.py  bd-nginx.conf  bdextra.py  config-ref.json  config.json.example  data-dump.sql  docker-compose.yml  e -i HEAD~2  flake.nix  index.html  json-config-ref.json  launcher.py  mkdocs.yml  objects.inv  privacy policy.txt  pyproject.toml  setup.cfg  sitemap.xml  slash-drop.py  tos.txt
.github/: funding.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml
.github/workflows/: codeql-analysis.yml  codeql.yml  docker.yml  fortify.yml  log_check.yml  pre-commit.yml  restart_bot_only.yml  wiki.yml
admin_panel/: manage.py
admin_panel/admin_panel/: admin.py  apps.py  asgi.py  logging.py  middleware.py  pipeline.py  settings.py  urls.py  webhook.py  wsgi.py
admin_panel/admin_panel/settings/: base.py  dev.py  local.py  production.example.py  production_base.py
admin_panel/api/: authentication.py  urls.py  views.py
admin_panel/bd_models/: admin.py  apps.py  enums.py  forms.py  models.py  utils.py
admin_panel/bd_models/admin/: __init__.py  ball.py  ball_instance.py  group.py  guild.py  player.py  special.py  trade.py
admin_panel/bd_models/migrations/: 0001_initial.py  0002_move_upload_files.py  0003_delete_ball_delete_ballinstance_and_more.py  0004_check_aerich_migrations_initial.py  0005_alter_ball_short_name.py  0005_special_credits_alter_ball_short_name.py  0006_ball_deleted.py  0006_player_accepted_tos.py  0006_player_extra_data.py  0006_player_money.py  0006_player_trade_cooldown_policy.py  0006_rename_ball_capacity_description_and_more.py  0007_alter_ballinstance_attack_bonus_and_more.py  0007_player_money_trade_player1_money_trade_player2_money.py  0007_player_trade_cooldown_policy.py  0008_alter_ball_options_alter_ballinstance_options_and_more.py  0008_alter_ballinstance_attack_bonus_and_more.py  0008_cardtemplate_alter_ball_options_and_more.py  0008_player_money_trade_player1_money_trade_player2_money.py  0009_alter_ballinstance_attack_bonus_and_more.py  0009_ballinstance_deleted_and_more.py  0009_player_money_trade_player1_money_trade_player2_money.py  0010_alter_ballinstance_attack_bonus_and_more.py  0010_auto_20250613_1343.py  0010_ball_club_ball_nationality_ball_position_and_more.py  0010_player_money_trade_player1_money_trade_player2_money.py  0011_alter_ballinstance_attack_bonus_and_more.py  0011_ball_defending_ball_dribbling_ball_pace_ball_passing_and_more.py  0012_add_daily_weekly_claim_timestamps.py  0012_alter_ballinstance_locked_and_more.py  0013_auto_20251117_1514.py  0014_alter_ball_options_alter_ballinstance_options_and_more.py  0014_apikey.py  0015_ball_renderer_special_renderer_and_more.py  0015_group_model.py  0015_player_accepted_tos.py  0015_player_accepted_tos.py.py
admin_panel/bd_models/templates/: ball_preview.html  generate_ball_preview.html
admin_panel/preview/: apps.py  urls.py  utils.py  views.py
admin_panel/settings/: admin.py  apps.py  models.py  utils.py
admin_panel/settings/migrations/: 0001_initial.py  0002_promptmessage_message_category_unique_together.py  0003_settings_currency_name_settings_currency_plural_name_and_more.py  0004_settings_site_base_url.py  0005_promptmessage_rarity.py  0006_alter_settings_admin_channel_ids.py  0006_alter_settings_admin_channel_ids_and_more.py
admin_panel/settings/services/: yml_import.py
admin_panel/templates/admin/: login.html
admin_panel/users/: admin.py  models.py  utils.py
admin_panel/users/migrations/: 0001_initial.py  0002_default_groups.py
admin_panel/users/templatetags/: discordlogin.py
api/bot/: index.html
api/models/: index.html
api/utils/buttons/: index.html
api/utils/db/: index.html
api/utils/django/: index.html
api/utils/enums/: index.html
api/utils/formatting/: index.html
api/utils/logging/: index.html
ballsdex/: __init__.py  __main__.py  logger.py  loggers.py  logging.py  settings.py
ballsdex/core/: bot.py  commands.py  customexceptions.py  dev.py  discord.py  help.py  metrics.py  models.py  tracing.py
ballsdex/templates/: base.html  dashboard.html
config/: production.example.py
dev/custom-package/: index.html
docs/: CNAME  index.md
docs/admin-panel/: exposing-to-internet.md  getting-started.md  index.md  rarity-mechanism.md
docs/api/: models.md
docs/dev/: custom-package.md
docs/misc/: index.md  migrating-git-install.md  migrating-windows-wsl
docs/selfhosting/: index.md  installing-ballsdex-no-docker.md  installing-ballsdex.md
migrations/models/: 0_20220909194724_init.sql  0_20220909204856_init.sql  10_20221022184330_update.sql  11_20230127140747_update.sql  12_20230224112031_update.sql  13_20230301173448_update.sql  14_20230326131235_update.sql  15_20230404133020_update.sql  16_20230410144614_update.sql  17_20230415141405_update.sql  17_20230420000356_update.sql  19_20230522100203_update.sql  1_20220909223048_update.sql  20_20230522102407_update.sql  20_20230725165036_update.sql  21_20231113175415_update.sql  22_20231115171322_update.sql  23_20231205113247_update.sql  23_20231218170749_update.sql  24_20231219112238_update.sql  25_20240109160009_update.sql  25_20240115150533_update.sql  26_20240121004430_update.sql  27_20240123140205_update.sql  28_20240225164026_update.sql  29_20240320142916_update.sql  29_20240323183043_update.sql  2_20220910020800_update.sql  30_20240627145737_update.sql  30_20240812140936_update.sql  31_20240723114727_update.sql  32_20240810180151_update.sql  32_20240830012954_update.sql  32_20240902113932_update.sql  33_20240819172701_update.sql  33_20240906092911_update.sql  33_20240906161013_update.sql  34_20240819230142_update.sql  34_20240909212154_update.sql  35_20240913181322_update.sql  (+17 more)
search/: search_index.json
selfhosting/: index.html
selfhosting/admin-panel/: index.html
selfhosting/misc/: index.html
(+91 files in other folders)
