[project]
name = "ballsdex"
version = "1.0.0"
description = ""
authors = [
    { name = 'Auguste "laggron42" Charpentier', email = "laggron42@ballsdex.com" },
    { name = 'Jamie "flare" McGuinness', email = "flare@ballsdex.com" },
]
license = "MIT"
requires-python = ">=3.13, <3.14"
dependencies = [
    # asyncio
    "uvloop==0.21.0; sys_platform != 'win32'",

    # discord
    "discord.py[speed]==2.5.2",

    # django admin panel
    "uvicorn[standard]==0.34.0",
    "django==5.2.1",
    "django-allow-cidr (>=0.7.1,<0.8.0)",
    "django-nonrelated-inlines==0.2",
    "django-admin-autocomplete-filter==0.7.1",
    "django-admin-action-forms==1.3.0",
    "django-admin-inline-paginator==0.4.0",
    "dj-database-url==2.3.0",
    "social-auth-app-django==5.4.2",
    "psycopg==3.2.3",
    "psycopg-binary==3.2.3",

    # metrics
    "prometheus-client==0.21.1",
    "sentry-sdk[asyncpg]==2.27.0",

    # misc
    "rich==14.0.0",
    "python-dateutil>=2.9.0",
    "Pillow==11.2.1",
    "pyyaml==6.0.2",
    "cachetools==5.5.2",
]

[project.optional-dependencies]
dev = [
    "pre-commit==4.2.0",
    "ruff>=0.11.10",
    "pyright==1.1.399",
    "django-debug-toolbar==4.4.6",
    "pyinstrument==5.0.0",
    "django-types",
]

[project.scripts]
ballsdex = "ballsdex.__main__:main"

[tool.hatch.build.targets.sdist]
include = ["ballsdex", "admin_panel"]
exclude = ["result"]

[tool.hatch.build.targets.wheel]
include = ["ballsdex", "admin_panel"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
django-types = { git = "https://github.com/sbdchd/django-types.git", rev = "f17818a8b664a713bbc3f609686cc6f9c9317be2" }

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py313"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = true
line-ending = "lf"
docstring-code-format = true

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E203"]
exclude = ["admin_panel/admin_panel/settings/*"]

[tool.ruff.lint.isort]
# list all django modules
known-first-party = ["ballsdex", "bd_models", "admin_panel", "preview"]
split-on-trailing-comma = false

[tool.pyright]
extraPaths = ["./admin_panel"]
pythonVersion = "3.13"
reportIncompatibleMethodOverride = "warning"
reportIncompatibleVariableOverride = "warning"

venvPath = "."
venv = ".venv"
