[project]
name = "ballsdex"
version = "1.0.0"
description = ""
authors = [
    { name = 'Auguste "laggron42" Charpentier', email = "laggron42@ballsdex.com" },
    { name = 'Jamie "flare" McGuinness', email = "flare@ballsdex.com" },
]
license = "MIT"
requires-python = ">=3.13, <3.14"
dependencies = [
    # asyncio
    "uvloop==0.21.0; sys_platform != 'win32'",

    # discord
    "discord.py[speed]==2.6.3",

    # database ORM
    "tortoise-orm[asyncpg]==0.25.1",
    "tortoise-cli==0.1.2",

    # django admin panel
    "uvicorn[standard]==0.35.0",
    "django==5.2.4",

    "django-allow-cidr (>=0.7.1,<0.8.0)",
    "django-nonrelated-inlines==0.2",
    "django-admin-autocomplete-filter==0.7.1",
    "django-admin-action-forms==1.3.0",
    "django-admin-inline-paginator==0.4.0",
    "dj-database-url==2.3.0",
    "social-auth-app-django==5.5.1",
    "psycopg==3.2.9",
    "psycopg-binary==3.2.9",

    # metrics
    "prometheus-client==0.22.1",

    # misc
    "rich==14.0.0",
    "python-dateutil==2.9.0",
    "Pillow==11.3.0",
    "pyyaml==6.0.2",
    "cachetools==6.1.0",
    "sentry-sdk[asyncpg]==2.33.0"
]

[project.optional-dependencies]
dev = [
    "pre-commit==3.7.1",
    "black==24.8.0",
    "flake8-pyproject==1.2.3",
    "flake8==7.2.0",
    "pyright==1.1.390",
    "isort==5.13.2",
    "django-debug-toolbar==4.4.6",
    "pyinstrument==5.0.0",
    "django-types",
]

[project.scripts]
ballsdex = "ballsdex.__main__:main"

[tool.hatch.build.targets.sdist]
include = ["ballsdex", "admin_panel"]
exclude = ["result"]

[tool.hatch.build.targets.wheel]
include = ["ballsdex", "admin_panel"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
django-types = { git = "https://github.com/sbdchd/django-types.git", rev = "04d8bee5e503e23dc1064a498485110002a4dc23" }

[tool.black]
line-length = 99

[tool.flake8]
ignore = "W503,E203,E999"
max-line-length = 99
exclude = "./admin_panel/admin_panel/settings/*"

[tool.isort]
profile = "black"
line_length = 99

[tool.pyright]
extraPaths = ["./admin_panel"]
pythonVersion = "3.13"
reportIncompatibleMethodOverride = "warning"
reportIncompatibleVariableOverride = "warning"

venvPath = "."
venv = ".venv"
