[metadata]
name = BallsDex
version = attr: ballsdex.__version__
license = GPL-3.0
author = El Laggron
author_email = laggron42@gmail.com
description = BallsDex Discord bot
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/laggron42/BallsDex
project_urls =
    Discord server = https://discord.gg/xDJagdu
    Patreon = https://www.patreon.com/retke
    Issue Tracker = https://github.com/laggron42/BallsDex/issues
    Source Code = https://github.com/laggron42/BallsDex
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Framework :: AsyncIO
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Topic :: Communications :: Chat
    Topic :: Games/Entertainment

[options]
packages = find:
python_requires = >=3.10
install_requires =
    aiofiles==0.8.0
    aiohttp==3.8.1
    aioredis==2.0.1
    aiosignal==1.2.0
    aiosqlite==0.17.0
    anyio==3.6.1
    async-timeout==4.0.2
    attrs==21.4.0
    Babel==2.10.3
    bcrypt==3.2.2
    cffi==1.15.1
    charset-normalizer==2.1.0
    click==8.1.3
    commonmark==0.9.1
    discord.py==2.0.1
    discord-ext-menus @ git+https://github.com/Rapptz/discord-ext-menus@8686b5d1bbc1d3c862292eb436ab630d6e9c9b53
    fastapi==0.79.0
    fastapi-admin @ git+https://github.com/fastapi-admin/fastapi-admin@5f34bf0d7356afa4c6034a7ab3942ea843d3b8ce
    frozenlist==1.3.0
    h11==0.13.0
    hiredis==2.0.0
    httptools==0.4.0
    idna==3.3
    iso8601==1.0.2
    Jinja2==3.1.2
    MarkupSafe==2.1.1
    multidict==6.0.2
    pendulum==2.1.2
    Pillow==9.2.0
    pycparser==2.21
    pydantic==1.9.1
    Pygments==2.12.0
    pypika-tortoise==0.1.6
    python-dateutil==2.8.2
    python-dotenv==0.20.0
    python-multipart==0.0.5
    pytz==2022.1
    pytzdata==2020.1
    PyYAML==6.0
    rich==12.5.1
    six==1.16.0
    sniffio==1.2.0
    starlette==0.19.1
    tortoise-orm[asyncpg]==0.19.2
    typing_extensions==4.3.0
    uvicorn==0.18.2
    uvloop==0.16.0
    watchfiles==0.16.0
    websockets==10.3
    yarl==1.7.2

[options.extras_require]
test =
    pytest==7.1.2

[options.packages.find]
include =
    ballsdex